fixed z-index of h3

--- a/src/App.scss
+++ b/src/App.scss
@@ -510,7 +510,7 @@ box-shadow:0px 3px 8px 8px rgba(0,0,0, 0.5);
   border: 1px solid #888;
   width: 90%;
   animation: modalfadein .5s ease-in;
-  z-index:99 !important;
+  z-index:9999 !important;
   color:black;
 }
 
@@ -1415,7 +1415,7 @@ font-weight:bold;}
 /*remember iconlistcontainer2 is just the h3 on the hero image, was originally icons*/
 #iconlistcontainer2 {
    position:absolute;
-   z-index:999999;
+   z-index:99;
    left:38%;
    top:14rem;
    text-align:center;
